modules/gdscript/tests/scripts/analyzer/errors/immutable_static_member_attempt_to_modify.gd
static let value : float = 10.0

func test():
	value = 0.0
